@@ -1,5 +1,6 @@
 Changes
 lib/Game/CharacterSheetGenerator.pm
+lib/Game/CharacterSheetGenerator/Command/multiple.pm
 lib/Game/CharacterSheetGenerator/Command/random.pm
 lib/Game/CharacterSheetGenerator/Command/stats.pm
 lib/Game/CharacterSheetGenerator/DwarfNames.pm
