@@ -2,6 +2,9 @@
 
 - Special name lists for demihumans.
 
+- New command to generate multiple characters (called "a bunch of
+  characters" on the Help page).
+
 1.01
 
 - Add porters and hirelings, with new character sheets: Hireling.svg,
